--- a/CityGuide.UI/src/app/city/city-detail/city-detail.component.html
+++ b/CityGuide.UI/src/app/city/city-detail/city-detail.component.html
@@ -2,7 +2,7 @@
 <div class="row">
 <div class="col-md-6">
     <h2 class="mt-3 pt-3">Fotoğraflar</h2>
-    <ngx-gallery [options]="galleryOptions" [images]="galleryImages"></ngx-gallery>
+    <!-- <ngx-gallery [options]="galleryOptions" [images]="galleryImages"></ngx-gallery> -->
 </div>
 <div class="col-md-6">
 <h2 class="mt-3 pt-3">Notlarım</h2>
