--- a/CityGuide.UI/src/app/city/city-detail/city-detail.component.html
+++ b/CityGuide.UI/src/app/city/city-detail/city-detail.component.html
@@ -2,6 +2,7 @@
 <div class="row">
 <div class="col-md-6">
     <h2 class="mt-3 pt-3">Fotoğraflar</h2>
+    <div *ngIf="images"><gallery [items]="images"></gallery></div>
     <!-- <ngx-gallery [options]="galleryOptions" [images]="galleryImages"></ngx-gallery> -->
 </div>
 <div class="col-md-6">
