--- a/CityGuide.UI/src/app/city/city-add/city-add.component.html
+++ b/CityGuide.UI/src/app/city/city-add/city-add.component.html
@@ -1,7 +1,7 @@
 <main role="main">
     <div class="container">
         <div class="row">
-            <form [formGroup]="cityAddForm" (ngSubmit)="add()" class="">
+            <form [formGroup]="cityAddForm" (ngSubmit)="add()" class="form-city-add">
                 <h2 class="mt-3 pt-3">Yeni bir şehir ekle</h2>
                 <div class="form-group">
                     <input type="text" id="name" formControlName="name" class="form-control" placeholder="Şehir Adı"
@@ -11,8 +11,12 @@
                         adı zorunludur!</span>
                 </div>
                 <div class="form-group">
-                    <input type="text" id="description" formControlName="description" class="form-control"
-                        placeholder="Şehir notu" autofocus>
+                    <div class="NgxEditor__Wrapper">
+                        <ngx-editor-menu [editor]="editor"> </ngx-editor-menu>
+                        <ngx-editor [editor]="editor" type="text" id="description" [disabled]="false"
+                            formControlName="description" autofocus [spellcheck]="true"
+                            [placeholder]="'Buraya notlarınızı giriniz...'"></ngx-editor>
+                    </div>
                     <span class="help-block"
                         *ngIf="cityAddForm.get('description').hasError('required') && cityAddForm.get('description').touched">Not
                         girmeniz zorunludur!</span>
@@ -20,8 +24,6 @@
                 <button class="btn btn-lg btn-primary btn-block" type="submit"
                     [disabled]="!cityAddForm.valid">Ekle</button>
             </form>
-            <h6>{{cityAddForm.value|json}}</h6>
-            <h6>{{cityAddForm.status|json}}</h6>
         </div>
     </div>
 </main>
