--- a/CityGuide.UI/src/app/city/city-detail/city-detail.component.html
+++ b/CityGuide.UI/src/app/city/city-detail/city-detail.component.html
@@ -1,15 +1,17 @@
 <main role="main" class="container">
-<div class="row">
-<div class="col-md-6">
-    <h2 class="mt-3 pt-3">Fotoğraflar</h2>
-    <div *ngIf="images"><gallery [items]="images"></gallery></div>
-    <!-- <ngx-gallery [options]="galleryOptions" [images]="galleryImages"></ngx-gallery> -->
-</div>
-<div class="col-md-6">
-<h2 class="mt-3 pt-3">Notlarım</h2>
-<div *ngIf="city">
-    {{city.description}}
-</div>
-</div>
-</div>
+    <div class="row">
+        <div class="col-md-6">
+            <h2 class="mt-3 pt-3">Fotoğraflar</h2>
+            <div *ngIf="images">
+                <gallery [items]="images"></gallery>
+            </div>
+            <!-- <ngx-gallery [options]="galleryOptions" [images]="galleryImages"></ngx-gallery> -->
+        </div>
+        <div class="col-md-6">
+            <h2 class="mt-3 pt-3">Notlarım</h2>
+            <div *ngIf="city" [innerHtml]="city.description">
+            </div>
+        </div>
+        <app-photo></app-photo>
+    </div>
 </main>
